get list of movies and detail page

--- a/movies/templates/movies/movies.html
+++ b/movies/templates/movies/movies.html
@@ -8,7 +8,7 @@
         <h1>Movies</h1>
         <ul>
             {% for movie in movies %}
-            <li>{{movie.title}}</li>
+            <li><a href={{movie.id}}>{{movie.title}}</a></li>
             {% endfor %}
         </ul>
     </body>
