--- a/movies/templates/movies/movies.html
+++ b/movies/templates/movies/movies.html
@@ -11,5 +11,6 @@
             <li><a href={{movie.id}}>{{movie.title}}</a></li>
             {% endfor %}
         </ul>
+        <a href='/movies/add'>Add a movie</a>
     </body>
 </html>
